# aws-ecs-fastapi-template

./: .dockerignore  .env.example  .gitignore  API_USAGE.md  Dockerfile  README.md  pyproject.toml
app/: cli.py  main.py
app/api/: routes.py
app/core/: auth.py  config.py
scripts/: build-and-push.sh  check-logs.sh  configure-templates.sh  create-service.sh  deploy.sh  setup.sh  validate.sh
