[tool.poetry]
name = "aws-ecs-api-template"
version = "1.0.0"
description = "Template for deploying a containerized FastAPI application to AWS ECS"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
httpx = "^0.25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
start = "app.cli:start"
dev = "app.cli:dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

